--- a/src/layouts/side-bar/side-bar.component.html
+++ b/src/layouts/side-bar/side-bar.component.html
@@ -1,11 +1,19 @@
 <aside class="sidebar">
-    <h2>Admin</h2>
-    <nav>
-      <ul>
-        <li><a routerLink="/admin/user-management">Người dùng</a></li>
-        <li><a routerLink="/admin/order-history">Lịch sử mua hàng</a></li>
-        <li><a routerLink="/admin/customer-support">Hỗ trợ khách hàng</a></li>
-        <li><a routerLink="/admin/product-management">Quản lí sản phẩm</a></li>
-      </ul>
-    </nav>
+  <div class="profile">
+    <img src="https://via.placeholder.com/50" alt="User Avatar" />
+    <div class="info">
+      <span class="name">Admin</span>
+      <span class="role">Administrator</span>
+    </div>
+  </div>
+  <h2>Web EazyCao</h2>
+  <nav>
+    <ul>
+      <li><a routerLink="/admin/user-management"><i class="fa fa-user"></i> Người dùng</a></li>
+      <li><a routerLink="/admin/dashboard-manager"><i class="fa fa-box"></i> DashBoard</a></li>
+      <li><a routerLink="/admin/order-history"><i class="fa fa-history"></i> Lịch sử mua hàng</a></li>
+      <li><a routerLink="/admin/customer-support"><i class="fa fa-headset"></i> Hỗ trợ khách hàng</a></li>
+      <li><a routerLink="/admin/product-management"><i class="fa fa-box"></i> Quản lí sản phẩm</a></li>
+    </ul>
+  </nav>
 </aside>
