--- a/src/views/productdetail-manager/productdetail-manager.component.html
+++ b/src/views/productdetail-manager/productdetail-manager.component.html
@@ -7,7 +7,7 @@
           <th>Số seri</th>
           <th>Mã thẻ</th>
           <th>Trạng Thái</th>
-          <th>Action</th>
+          <!-- <th>Action</th> -->
         </tr>
       </thead>
       <tbody>
@@ -20,10 +20,10 @@
               {{ detail.isDelete ? 'Đã xóa' : 'Hoạt động' }}
             </span>
           </td>
-          <td>
+          <!-- <td>
             <button class="btn btn-edit" (click)="editDetail(detail.id)">Sửa</button>
             <button class="btn btn-delete" (click)="deleteDetail(detail.id)">Xóa</button>
-          </td>
+          </td> -->
         </tr>
       </tbody>
     </table>
